--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.13.3",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
