--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
+    "@mui/x-data-grid": "^7.22.2",
+    "chart.js": "^4.4.6",
     "next": "15.0.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
