--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.3",
     "rechart": "^0.0.1",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4"
