--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
+    "@tanstack/react-table": "^8.20.5",
+    "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
