--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
+    "@mui/lab": "^6.0.0-beta.16",
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.2",
+    "@mui/x-date-pickers": "^7.22.2",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "next": "15.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
