--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.2",
-    "@mui/x-date-pickers": "^7.22.2",
+    "@mui/x-date-pickers": "7.22.3",
+    "@mui/x-date-pickers-pro": "^7.22.3",
+    "@rsuite/icons": "^1.3.0",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "next": "15.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "rsuite": "^5.74.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
