--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "multiselect-react-dropdown": "^2.0.25",
     "next": "15.0.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-select": "^5.8.3",
     "recharts": "^2.13.3",
-    "rsuite": "^5.74.2"
+    "rsuite": "^5.74.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
