--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "radix-ui": "^1.0.1",
