--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.7",
+    "@mui/lab": "^6.0.0-beta.16",
     "@mui/material": "^6.1.8",
     "@mui/x-charts": "^7.22.2",
+    "@mui/x-date-pickers": "^7.22.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -24,6 +26,8 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.13",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
