--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.7",
     "@mui/lab": "^6.0.0-beta.16",
     "@mui/material": "^6.1.8",
@@ -22,6 +23,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +33,7 @@
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -41,21 +44,26 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.8.3",
     "react-simple-wysiwyg": "^3.1.2",
+    "react-toastify": "^10.0.6",
     "rechart": "^0.0.1",
     "recharts": "^2.13.3",
     "rsuite": "^5.74.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.12",
     "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "@types/react-draft-wysiwyg": "^1.13.8",
