--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-table": "^8.20.5",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -37,6 +38,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
+    "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-preview": "^8.0.3",
