--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
     "chart.js": "^4.4.6",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-image": "^1.11.11",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "radix-ui": "^1.0.1",
