Implement Kanban Board

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^3.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fullcalendar/react": "^6.1.15",
@@ -31,11 +33,13 @@
     "@tanstack/react-table": "^8.20.5",
     "@toast-ui/react-calendar": "^2.1.3",
     "@types/chart.js": "^2.9.41",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.0",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dnd-kit": "^0.0.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "fullcalendar": "^6.1.15",
@@ -44,6 +48,7 @@
     "next": "15.0.3",
     "radix-ui": "^1.0.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.16.3",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
@@ -56,15 +61,18 @@
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^5.3.0",
+    "react-ionicons": "^4.2.1",
     "react-select": "^5.8.3",
     "react-simple-wysiwyg": "^3.1.2",
     "react-svg": "^16.2.0",
     "rechart": "^0.0.1",
     "recharts": "^2.13.3",
     "rsuite": "^5.74.2",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tui-calendar": "^1.15.3",
+    "uuid": "^11.0.3",
     "vaul": "^1.1.1"
   },
   "devDependencies": {
