--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-big-calendar": "^1.16.0",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
@@ -42,10 +44,13 @@
     "draftjs-to-html": "^0.9.1",
     "html-to-image": "^1.11.11",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "radix-ui": "^1.0.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.17.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "8.10.1",
@@ -61,6 +66,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.8.3",
     "react-simple-wysiwyg": "^3.1.2",
+    "react-svg": "^16.2.0",
     "react-toastify": "^10.0.6",
     "rechart": "^0.0.1",
     "recharts": "^2.13.3",
