--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-image": "^1.11.11",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
