merge: finance and super admin

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.0",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
@@ -44,6 +45,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-image": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
