--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.0",
     "axios": "^1.7.9",
