api: transfer and banking integration

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEXTAUTH_SECRET = r3M2Tq+TknA/VbcMuSbQh4DZdNCXdQmnV/LMbA6whiQ=
 NEXTAUTH_URL = 'http://localhost:3000'
+
+
+NEXT_PUBLIC_API_URL=https://nest-backend-ese4.onrender.com/api/v1/
+NEXT_PUBLIC_TEST=true
