--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.7",
     "@mui/lab": "^6.0.0-beta.16",
@@ -37,6 +38,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.0",
+    "@types/warning": "^3.0.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
@@ -53,9 +55,9 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "radix-ui": "^1.0.1",
-    "react": "18.2.0",
+    "react": "18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-big-calendar": "^1.17.0",
+    "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "8.10.1",
@@ -63,7 +65,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-preview": "^8.0.3",
     "react-dnd-touch-backend": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.3.0",
@@ -84,18 +86,23 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.3",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
-    "@types/react": "^18.3.12",
+    "@types/react": "18",
     "@types/react-date-range": "^1.4.9",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^19.0.3",
     "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/recharts": "^1.8.29",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.0",
+    "react": "^18.0.0"
   }
 }
