--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-big-calendar": "^1.16.0",
+    "@types/webpack": "^5.28.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
